--- a/rock paper scissors/index.html
+++ b/rock paper scissors/index.html
@@ -10,19 +10,19 @@
 
 <body>
   <div class="wrapper">
-  <div class="buttons">
-    <button class="rpsButton" value="Rock">✊</button>
-    <button class="rpsButton" value="Paper">🤚</button>
-    <button class="rpsButton" value="Scissors">✌</button>
+    <div class="buttons">
+      <button class="rpsButton" value="rock">✊</button>
+      <button class="rpsButton" value="paper">🤚</button>
+      <button class="rpsButton" value="scissors">✌</button>
+    </div>
+    <div class="resultContainer">
+      <div id="player-score"></div>
+      <div id="hands"></div>
+      <div id="result"></div>
+      <button id='endGameButton'>🔴</button>
+    </div>
   </div>
-  <div class="resultContainer">
-  <div id="player-score"></div>
-  <div id="hands"></div>
-  <div id="result"></div>
-  <button id='endGameButton'>🔴</button>
-  </div>
-  </div>
-  
+
   <script src="script.js"></script>
 </body>
 
